@@ -62,6 +62,7 @@ MapSettings::SetDefaults()
   show_flarm_alarm_level = true;
   show_thermal_profile = true;
   final_glide_bar_mc0_enabled = true;
+  show_fai_triangle_areas = false;
 
   trail.SetDefaults();
   item_list.SetDefaults();
