@@ -5,6 +5,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.5 - not yet released
 * map
   - lower zoom levels possible while circling (#1120)
+  - draw FAI triangle areas (#1563)
 * calculations
   - don't detect landing while climbing in a wave (#1330, #2289, #2406)
   - basic support for the contest "DMSt" (#2208)
